T1453 - fixed layout issues

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1184,6 +1184,10 @@ ul.bb-albums-list {
 	margin-bottom: 20px;
 }
 
+.bb-model-footer.flex .bb-dropdown-wrap {
+	margin-bottom: 0;
+}
+
 .bp-media-upload-tab {
 	margin-right: 15px;
 }
